# serializer version: 1
# name: test_events[generic_switch][event.mock_generic_switch_button-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'event_types': list([
        'initial_press',
        'short_release',
        'long_press',
        'long_release',
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'event',
    'entity_category': None,
    'entity_id': 'event.mock_generic_switch_button',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': <EventDeviceClass.BUTTON: 'button'>,
    'original_icon': None,
    'original_name': 'Button',
    'platform': 'matter',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'button',
    'unique_id': '00000000000004D2-0000000000000001-MatterNodeDevice-1-GenericSwitch-59-1',
    'unit_of_measurement': None,
  })
# ---
# name: test_events[generic_switch][event.mock_generic_switch_button-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'button',
      'event_type': None,
      'event_types': list([
        'initial_press',
        'short_release',
        'long_press',
        'long_release',
      ]),
      'friendly_name': 'Mock Generic Switch Button',
    }),
    'context': <ANY>,
    'entity_id': 'event.mock_generic_switch_button',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_events[generic_switch_multi][event.mock_generic_switch_button_1-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'event_types': list([
        'multi_press_1',
        'multi_press_2',
        'long_press',
        'long_release',
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'event',
    'entity_category': None,
    'entity_id': 'event.mock_generic_switch_button_1',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': <EventDeviceClass.BUTTON: 'button'>,
    'original_icon': None,
    'original_name': 'Button (1)',
    'platform': 'matter',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'button',
    'unique_id': '00000000000004D2-0000000000000001-MatterNodeDevice-1-GenericSwitch-59-1',
    'unit_of_measurement': None,
  })
# ---
# name: test_events[generic_switch_multi][event.mock_generic_switch_button_1-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'button',
      'event_type': None,
      'event_types': list([
        'multi_press_1',
        'multi_press_2',
        'long_press',
        'long_release',
      ]),
      'friendly_name': 'Mock Generic Switch Button (1)',
    }),
    'context': <ANY>,
    'entity_id': 'event.mock_generic_switch_button_1',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_events[generic_switch_multi][event.mock_generic_switch_button_fancy_button-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'event_types': list([
        'multi_press_1',
        'multi_press_2',
        'multi_press_3',
        'multi_press_4',
        'long_press',
        'long_release',
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'event',
    'entity_category': None,
    'entity_id': 'event.mock_generic_switch_button_fancy_button',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': <EventDeviceClass.BUTTON: 'button'>,
    'original_icon': None,
    'original_name': 'Button (Fancy Button)',
    'platform': 'matter',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'button',
    'unique_id': '00000000000004D2-0000000000000001-MatterNodeDevice-2-GenericSwitch-59-1',
    'unit_of_measurement': None,
  })
# ---
# name: test_events[generic_switch_multi][event.mock_generic_switch_button_fancy_button-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'button',
      'event_type': None,
      'event_types': list([
        'multi_press_1',
        'multi_press_2',
        'multi_press_3',
        'multi_press_4',
        'long_press',
        'long_release',
      ]),
      'friendly_name': 'Mock Generic Switch Button (Fancy Button)',
    }),
    'context': <ANY>,
    'entity_id': 'event.mock_generic_switch_button_fancy_button',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_events[haijai_switch][event.hjmt_6b_button_1-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'event_types': list([
        'multi_press_1',
        'multi_press_2',
        'long_press',
        'long_release',
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'event',
    'entity_category': None,
    'entity_id': 'event.hjmt_6b_button_1',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': <EventDeviceClass.BUTTON: 'button'>,
    'original_icon': None,
    'original_name': 'Button (1)',
    'platform': 'matter',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'button',
    'unique_id': '00000000000004D2-0000000000000003-MatterNodeDevice-1-GenericSwitch-59-1',
    'unit_of_measurement': None,
  })
# ---
# name: test_events[haijai_switch][event.hjmt_6b_button_1-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'button',
      'event_type': None,
      'event_types': list([
        'multi_press_1',
        'multi_press_2',
        'long_press',
        'long_release',
      ]),
      'friendly_name': 'HJMT-6B Button (1)',
    }),
    'context': <ANY>,
    'entity_id': 'event.hjmt_6b_button_1',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_events[haijai_switch][event.hjmt_6b_button_2-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'event_types': list([
        'multi_press_1',
        'multi_press_2',
        'long_press',
        'long_release',
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'event',
    'entity_category': None,
    'entity_id': 'event.hjmt_6b_button_2',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': <EventDeviceClass.BUTTON: 'button'>,
    'original_icon': None,
    'original_name': 'Button (2)',
    'platform': 'matter',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'button',
    'unique_id': '00000000000004D2-0000000000000003-MatterNodeDevice-2-GenericSwitch-59-1',
    'unit_of_measurement': None,
  })
# ---
# name: test_events[haijai_switch][event.hjmt_6b_button_2-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'button',
      'event_type': None,
      'event_types': list([
        'multi_press_1',
        'multi_press_2',
        'long_press',
        'long_release',
      ]),
      'friendly_name': 'HJMT-6B Button (2)',
    }),
    'context': <ANY>,
    'entity_id': 'event.hjmt_6b_button_2',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_events[haijai_switch][event.hjmt_6b_button_3-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'event_types': list([
        'multi_press_1',
        'multi_press_2',
        'long_press',
        'long_release',
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'event',
    'entity_category': None,
    'entity_id': 'event.hjmt_6b_button_3',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': <EventDeviceClass.BUTTON: 'button'>,
    'original_icon': None,
    'original_name': 'Button (3)',
    'platform': 'matter',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'button',
    'unique_id': '00000000000004D2-0000000000000003-MatterNodeDevice-3-GenericSwitch-59-1',
    'unit_of_measurement': None,
  })
# ---
# name: test_events[haijai_switch][event.hjmt_6b_button_3-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'button',
      'event_type': None,
      'event_types': list([
        'multi_press_1',
        'multi_press_2',
        'long_press',
        'long_release',
      ]),
      'friendly_name': 'HJMT-6B Button (3)',
    }),
    'context': <ANY>,
    'entity_id': 'event.hjmt_6b_button_3',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_events[haijai_switch][event.hjmt_6b_button_4-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'event_types': list([
        'multi_press_1',
        'multi_press_2',
        'long_press',
        'long_release',
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'event',
    'entity_category': None,
    'entity_id': 'event.hjmt_6b_button_4',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': <EventDeviceClass.BUTTON: 'button'>,
    'original_icon': None,
    'original_name': 'Button (4)',
    'platform': 'matter',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'button',
    'unique_id': '00000000000004D2-0000000000000003-MatterNodeDevice-4-GenericSwitch-59-1',
    'unit_of_measurement': None,
  })
# ---
# name: test_events[haijai_switch][event.hjmt_6b_button_4-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'button',
      'event_type': None,
      'event_types': list([
        'multi_press_1',
        'multi_press_2',
        'long_press',
        'long_release',
      ]),
      'friendly_name': 'HJMT-6B Button (4)',
    }),
    'context': <ANY>,
    'entity_id': 'event.hjmt_6b_button_4',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_events[haijai_switch][event.hjmt_6b_button_5-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'event_types': list([
        'multi_press_1',
        'multi_press_2',
        'long_press',
        'long_release',
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'event',
    'entity_category': None,
    'entity_id': 'event.hjmt_6b_button_5',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': <EventDeviceClass.BUTTON: 'button'>,
    'original_icon': None,
    'original_name': 'Button (5)',
    'platform': 'matter',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'button',
    'unique_id': '00000000000004D2-0000000000000003-MatterNodeDevice-5-GenericSwitch-59-1',
    'unit_of_measurement': None,
  })
# ---
# name: test_events[haijai_switch][event.hjmt_6b_button_5-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'button',
      'event_type': None,
      'event_types': list([
        'multi_press_1',
        'multi_press_2',
        'long_press',
        'long_release',
      ]),
      'friendly_name': 'HJMT-6B Button (5)',
    }),
    'context': <ANY>,
    'entity_id': 'event.hjmt_6b_button_5',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_events[haijai_switch][event.hjmt_6b_button_6-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'event_types': list([
        'multi_press_1',
        'multi_press_2',
        'long_press',
        'long_release',
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'event',
    'entity_category': None,
    'entity_id': 'event.hjmt_6b_button_6',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': <EventDeviceClass.BUTTON: 'button'>,
    'original_icon': None,
    'original_name': 'Button (6)',
    'platform': 'matter',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'button',
    'unique_id': '00000000000004D2-0000000000000003-MatterNodeDevice-6-GenericSwitch-59-1',
    'unit_of_measurement': None,
  })
# ---
# name: test_events[haijai_switch][event.hjmt_6b_button_6-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'button',
      'event_type': None,
      'event_types': list([
        'multi_press_1',
        'multi_press_2',
        'long_press',
        'long_release',
      ]),
      'friendly_name': 'HJMT-6B Button (6)',
    }),
    'context': <ANY>,
    'entity_id': 'event.hjmt_6b_button_6',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_events[inovelli_vtm30][event.white_series_onoff_switch_button_config-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'event_types': list([
        'multi_press_1',
        'multi_press_2',
        'multi_press_3',
        'multi_press_4',
        'multi_press_5',
        'long_press',
        'long_release',
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'event',
    'entity_category': None,
    'entity_id': 'event.white_series_onoff_switch_button_config',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': <EventDeviceClass.BUTTON: 'button'>,
    'original_icon': None,
    'original_name': 'Button (Config)',
    'platform': 'matter',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'button',
    'unique_id': '00000000000004D2-0000000000000100-MatterNodeDevice-5-GenericSwitch-59-1',
    'unit_of_measurement': None,
  })
# ---
# name: test_events[inovelli_vtm30][event.white_series_onoff_switch_button_config-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'button',
      'event_type': None,
      'event_types': list([
        'multi_press_1',
        'multi_press_2',
        'multi_press_3',
        'multi_press_4',
        'multi_press_5',
        'long_press',
        'long_release',
      ]),
      'friendly_name': 'White Series OnOff Switch Button (Config)',
    }),
    'context': <ANY>,
    'entity_id': 'event.white_series_onoff_switch_button_config',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_events[inovelli_vtm30][event.white_series_onoff_switch_button_down-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'event_types': list([
        'multi_press_1',
        'multi_press_2',
        'multi_press_3',
        'multi_press_4',
        'multi_press_5',
        'long_press',
        'long_release',
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'event',
    'entity_category': None,
    'entity_id': 'event.white_series_onoff_switch_button_down',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': <EventDeviceClass.BUTTON: 'button'>,
    'original_icon': None,
    'original_name': 'Button (Down)',
    'platform': 'matter',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'button',
    'unique_id': '00000000000004D2-0000000000000100-MatterNodeDevice-4-GenericSwitch-59-1',
    'unit_of_measurement': None,
  })
# ---
# name: test_events[inovelli_vtm30][event.white_series_onoff_switch_button_down-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'button',
      'event_type': None,
      'event_types': list([
        'multi_press_1',
        'multi_press_2',
        'multi_press_3',
        'multi_press_4',
        'multi_press_5',
        'long_press',
        'long_release',
      ]),
      'friendly_name': 'White Series OnOff Switch Button (Down)',
    }),
    'context': <ANY>,
    'entity_id': 'event.white_series_onoff_switch_button_down',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_events[inovelli_vtm30][event.white_series_onoff_switch_button_up-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'event_types': list([
        'multi_press_1',
        'multi_press_2',
        'multi_press_3',
        'multi_press_4',
        'multi_press_5',
        'long_press',
        'long_release',
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'event',
    'entity_category': None,
    'entity_id': 'event.white_series_onoff_switch_button_up',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': <EventDeviceClass.BUTTON: 'button'>,
    'original_icon': None,
    'original_name': 'Button (Up)',
    'platform': 'matter',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'button',
    'unique_id': '00000000000004D2-0000000000000100-MatterNodeDevice-3-GenericSwitch-59-1',
    'unit_of_measurement': None,
  })
# ---
# name: test_events[inovelli_vtm30][event.white_series_onoff_switch_button_up-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'button',
      'event_type': None,
      'event_types': list([
        'multi_press_1',
        'multi_press_2',
        'multi_press_3',
        'multi_press_4',
        'multi_press_5',
        'long_press',
        'long_release',
      ]),
      'friendly_name': 'White Series OnOff Switch Button (Up)',
    }),
    'context': <ANY>,
    'entity_id': 'event.white_series_onoff_switch_button_up',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_events[multi_endpoint_light][event.inovelli_button_config-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'event_types': list([
        'multi_press_1',
        'multi_press_2',
        'multi_press_3',
        'multi_press_4',
        'multi_press_5',
        'long_press',
        'long_release',
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'event',
    'entity_category': None,
    'entity_id': 'event.inovelli_button_config',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': <EventDeviceClass.BUTTON: 'button'>,
    'original_icon': None,
    'original_name': 'Button (Config)',
    'platform': 'matter',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'button',
    'unique_id': '00000000000004D2-00000000000000C5-MatterNodeDevice-5-GenericSwitch-59-1',
    'unit_of_measurement': None,
  })
# ---
# name: test_events[multi_endpoint_light][event.inovelli_button_config-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'button',
      'event_type': None,
      'event_types': list([
        'multi_press_1',
        'multi_press_2',
        'multi_press_3',
        'multi_press_4',
        'multi_press_5',
        'long_press',
        'long_release',
      ]),
      'friendly_name': 'Inovelli Button (Config)',
    }),
    'context': <ANY>,
    'entity_id': 'event.inovelli_button_config',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_events[multi_endpoint_light][event.inovelli_button_down-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'event_types': list([
        'multi_press_1',
        'multi_press_2',
        'multi_press_3',
        'multi_press_4',
        'multi_press_5',
        'long_press',
        'long_release',
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'event',
    'entity_category': None,
    'entity_id': 'event.inovelli_button_down',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': <EventDeviceClass.BUTTON: 'button'>,
    'original_icon': None,
    'original_name': 'Button (Down)',
    'platform': 'matter',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'button',
    'unique_id': '00000000000004D2-00000000000000C5-MatterNodeDevice-4-GenericSwitch-59-1',
    'unit_of_measurement': None,
  })
# ---
# name: test_events[multi_endpoint_light][event.inovelli_button_down-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'button',
      'event_type': None,
      'event_types': list([
        'multi_press_1',
        'multi_press_2',
        'multi_press_3',
        'multi_press_4',
        'multi_press_5',
        'long_press',
        'long_release',
      ]),
      'friendly_name': 'Inovelli Button (Down)',
    }),
    'context': <ANY>,
    'entity_id': 'event.inovelli_button_down',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_events[multi_endpoint_light][event.inovelli_button_up-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'event_types': list([
        'multi_press_1',
        'multi_press_2',
        'multi_press_3',
        'multi_press_4',
        'multi_press_5',
        'long_press',
        'long_release',
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'event',
    'entity_category': None,
    'entity_id': 'event.inovelli_button_up',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': <EventDeviceClass.BUTTON: 'button'>,
    'original_icon': None,
    'original_name': 'Button (Up)',
    'platform': 'matter',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'button',
    'unique_id': '00000000000004D2-00000000000000C5-MatterNodeDevice-3-GenericSwitch-59-1',
    'unit_of_measurement': None,
  })
# ---
# name: test_events[multi_endpoint_light][event.inovelli_button_up-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'button',
      'event_type': None,
      'event_types': list([
        'multi_press_1',
        'multi_press_2',
        'multi_press_3',
        'multi_press_4',
        'multi_press_5',
        'long_press',
        'long_release',
      ]),
      'friendly_name': 'Inovelli Button (Up)',
    }),
    'context': <ANY>,
    'entity_id': 'event.inovelli_button_up',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_events[silabs_light_switch][event.light_switch_example_button-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'event_types': list([
        'initial_press',
        'short_release',
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'event',
    'entity_category': None,
    'entity_id': 'event.light_switch_example_button',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': <EventDeviceClass.BUTTON: 'button'>,
    'original_icon': None,
    'original_name': 'Button',
    'platform': 'matter',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'button',
    'unique_id': '00000000000004D2-000000000000008E-MatterNodeDevice-2-GenericSwitch-59-1',
    'unit_of_measurement': None,
  })
# ---
# name: test_events[silabs_light_switch][event.light_switch_example_button-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'button',
      'event_type': None,
      'event_types': list([
        'initial_press',
        'short_release',
      ]),
      'friendly_name': 'Light switch example Button',
    }),
    'context': <ANY>,
    'entity_id': 'event.light_switch_example_button',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
